--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 
     <groupId>ch.scheitlin.alex.java</groupId>
     <artifactId>java-stack-trace-parser</artifactId>
-    <version>1.0.1</version>
+    <version>2.0.0</version>
+    <properties>
+        <maven.compiler.release>9</maven.compiler.release>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
